--- a/styles/global.css
+++ b/styles/global.css
@@ -11,10 +11,10 @@
 
 body {
   /* width: 100vh; */
-  padding-inline:1rem;
+  padding: 3.5rem 1.5rem;
   background-color: var(--neutral-very-dark-blue-main-bg);
   display: flex;
   justify-content: center;
   align-items: center;
-  border:1px solid red;
+  /* border: 1px solid red; */
 }
