--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,18 +1,4 @@
-:root {
-  /* Primary Colors */
-  --primary-soft-blue: hsl(178, 100%, 50%); /* Soft blue */
-  --primary-cyan: hsl(178, 100%, 50%); /* Cyan */
-
-
-/* Neutral Colors */
---neutral-very-dark-blue-main-bg: hsl(217, 54%, 11%); /* Very dark blue (main BG) */
---neutral-very-dark-blue-card-bg: hsl(216, 50%, 16%); /* Very dark blue (card BG) */
---neutral-very-dark-blue-line: hsl(215, 32%, 27%); /* Very dark blue (line) */
---neutral-white: hsl(0, 0%, 100%); /* White */
+.section {
+  margin: 1rem 0;
+  line-height: 1.5;
 }
-
-
-.section{
-  margin:1rem 0;
-}
-
